--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,28 @@
 /*  your css code here. If applicable */
+input{
+	width:0px;
+	height:0px;
+}
+input:checked+label{
+	background-color:green;
+}
+label{
+	display:inline-block;
+	width:50px;
+	height:20px;
+	background-color:gray;
+	border-radius:10px;
+	position:relative;
+}
+
+.circle{
+	background-color:yellow;
+	height:18px;
+	width:18px;
+	border-radius:9px;
+	position:absolute;
+	top:1px;
+}
+input:checked+label .circle{
+	right:1px;	
+}
